--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Наймите человека с инвалидностью</title>
+    <meta name="description" content="Возьмите человека с инвалидностью на работу">
+    <meta name="keywords" content="работа, инвалидность, удаленная">
+    <meta name="robots" content="index,follow,noodp">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" data-mce-href="/favicon-16x16.png">
+
 </head>
 <body>
     <!--
